commit "create libraly and shop"

--- a/Front/html/profile/profile.html
+++ b/Front/html/profile/profile.html
@@ -14,11 +14,11 @@
         border-radius: 8px;
         font-size: 0;
        ">
-          <a style=" width: 100px;" v-if="active_page===0" href="../page/page.html">Main</a>
-          <a style=" width: 110px;" v-if="active_page===1" href="#">Shop</a>
-          <a style=" width: 100px;" v-if="active_page===2" href="#">Library</a>
-          <a style=" width: 160px;" v-if="active_page===3" href="../profile/profile.html">My profile</a>
-          <a style=" width: 120px;"  href="../login/index.html">Exit</a>     
+          <a style=" width: 100px;" href="../page/page.html">Main</a>
+          <a style=" width: 110px;" href="../shop/shop.html">Shop</a>
+          <a style=" width: 100px;" href="../libraly/libraly.html">Library</a>
+          <a style=" width: 160px;" href="../profile/profile.html">My profile</a>
+          <a style=" width: 120px;" href="../login/index.html">Exit</a> 
           <div class="animation start-home"></div>   
         </div>   
         <div style="margin-top: 20%; margin-left: 25%" class="container">
