commit add libraly and shop site

--- a/Front/html/shop/shop.html
+++ b/Front/html/shop/shop.html
@@ -7,7 +7,8 @@
     <title>Steam</title> 
     <link rel="stylesheet" type="text/css" href="shop.css"> 
     <body>
-    <div style="  position: relative;
+    <div style=" 
+     position: relative;
     width: auto;
     height: 50px;
     background-color: #34495e;
@@ -24,22 +25,70 @@
     <div>
 
     </div>
-    
-    <div style="display:flex;" >
-        <table>
-            <tr>
-                <td>
-                    Тест <span>тест</span>
-                </td>
-                <td>
-                    тест
-                </td>
-                <td>
-                    тест
-                </td>
-            </tr>
-        </table>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        
+    </body>
+    </html>
+    <div style="display:flex; margin-top: 10%;" >
+        <table class="container">
+            <thead>
+              <tr>
+                <th><h1>Sites</h1></th>
+                <th><h1>Views</h1></th>
+                <th><h1>Clicks</h1></th>
+                <th><h1>Average</h1></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Google</td>
+                <td>9518</td>
+                <td>6369</td>
+                <td>01:32:50</td>
+              </tr>
+              <tr>
+                <td>Twitter</td>
+                <td>7326</td>
+                <td>10437</td>
+                <td>00:51:22</td>
+              </tr>
+              <tr>
+                <td>Amazon</td>
+                <td>4162</td>
+                <td>5327</td>
+                <td>00:24:34</td>
+              </tr>
+              <tr>
+                <td>LinkedIn</td>
+                <td>3654</td>
+                <td>2961</td>
+                <td>00:12:10</td>
+              </tr>
+              <tr>
+                <td>CodePen</td>
+                <td>2002</td>
+                <td>4135</td>
+                <td>00:46:19</td>
+              </tr>
+              <tr>
+                <td>GitHub</td>
+                <td>4623</td>
+                <td>3486</td>
+                <td>00:31:52</td>
+              </tr>
+            </tbody>
+          </table> 
+        </div>
     </div>
+   
         <script src="page.js"></script>
         <script src="https://kit.fontawesome.com/95a02bd20d.js"></script>
   </body>
